--- a/tooplate_style.css
+++ b/tooplate_style.css
@@ -14,7 +14,7 @@ body {
 	font-size: 12px;
 	line-height: 1.5em; 
 	background-color: #181617;
-	background-image: url(images/tooplate_body.jpg);
+	background-image: url(https://cdn.jsdelivr.net/gh/ulugbek9909/library/images/tooplate_body.jpg);
 	background-repeat: repeat;
 }
 
@@ -153,27 +153,27 @@ em { color: #ab6700; }
 }
 
 .service_list li .service_one { 
-	background: url(images/onebit_08.png) center left no-repeat; 
+	background: url(https://cdn.jsdelivr.net/gh/ulugbek9909/library/images/onebit_08.png) center left no-repeat; 
 }
 
 .service_list li .service_two { 
-	background: url(images/onebit_11.png) center left no-repeat; 
+	background: url(https://cdn.jsdelivr.net/gh/ulugbek9909/library/images/onebit_11.png) center left no-repeat; 
 }
 
 .service_list li .service_three { 
-	background: url(images/onebit_17.png) center left no-repeat; 
+	background: url(https://cdn.jsdelivr.net/gh/ulugbek9909/library/images/onebit_17.png) center left no-repeat; 
 }
 
 .service_list li .service_four { 
-	background: url(images/onebit_21.png) center left no-repeat; 
+	background: url(https://cdn.jsdelivr.net/gh/ulugbek9909/library/images/onebit_21.png) center left no-repeat; 
 }
 
 .service_list li .service_five { 
-	background: url(images/onebit_12.png) center left no-repeat; 
+	background: url(https://cdn.jsdelivr.net/gh/ulugbek9909/library/images/onebit_12.png) center left no-repeat; 
 }
 
 .service_list li .service_six { 
-	background: url(images/onebit_19.png) center left no-repeat; 
+	background: url(https://cdn.jsdelivr.net/gh/ulugbek9909/library/images/onebit_19.png) center left no-repeat; 
 }
 
 #contact_form {  
